--- a/resolution.tex
+++ b/resolution.tex
@@ -234,6 +234,14 @@ To understand why dilute CAPE is so insensitive to subsidence in the subtropics,
 
 AGCMs are known to suffer from a drizzle bias, producing too much light rain relative to observations \citep{D2006JCLIM}. Figure~\ref{fig:4zonal}d shows the fraction of ZM precipitation $\leq 5$ mm/day in the simulations, which stubbornly persists at 70\% in the $\pm \left(10^{\circ}-20^{\circ} \right)$ latitude bands, irrespective of resolution. The analysis of dilute CAPE in the subtropics indicates that the predominance of drizzle is a result of this shallow convection regime of the ZM scheme. While $FREQZM$ does decrease with resolution in drizzling regions as a result of larger magnitude subsidence and its influence on dilute CAPE (not shown), these resolution sensitivities are not an effective means to eliminate the shallow convection regime of the ZM scheme.
 
+\begin{figure}
+\begin{center}
+\noindent\includegraphics[width=14pc,angle=0]{figs/temp_2zonal.pdf}\\
+\end{center}
+\caption{Zonal mean (a) R-values and (b) sensitivity parameter in the logistic regression, (c) climatological surface latent heat fluxes and (d) drizzle fraction.}
+\label{fig:2zonal}
+\end{figure}
+
 \subsection{Vertical Velocities and Stratiform Precipitation}
 
 In contrast to the impact of vertical motion on the ZM scheme, the stratiform scheme is more intuitively connected to vertical velocities. \cite{RETAL2016CD} proposed that total precipitation rates in models ($R$, sum of convective and stratiform precipitation rates) can be approximated by the upward moisture flux through cloud base,
