--- a/resolution.tex
+++ b/resolution.tex
@@ -154,7 +154,7 @@ where $b_0$ and $b_1$ are the shape parameters of the exponential. The predictor
 \begin{center}
 \noindent\includegraphics[width=14pc,angle=0]{figs/temp_4zonal.pdf}\\
 \end{center}
-\caption{Zonal mean (a) R-values and (b) sensitivity parameter in the logistic regression, (c) climatological surface latent heat fluxes and (d) drizzle fraction.}
+\caption{Zonal mean (a) R-values and (b) sensitivity parameter in the logistic regression, (c) climatological $\langle f_{d} \rangle \langle \omega_{d} \rangle$ and (d) climatological $FREQZM$.}
 \label{fig:4zonal}
 \end{figure}
 
@@ -238,7 +238,7 @@ AGCMs are known to suffer from a drizzle bias, producing too much light rain rel
 \begin{center}
 \noindent\includegraphics[width=14pc,angle=0]{figs/temp_2zonal.pdf}\\
 \end{center}
-\caption{Zonal mean (a) R-values and (b) sensitivity parameter in the logistic regression, (c) climatological surface latent heat fluxes and (d) drizzle fraction.}
+\caption{Climatological, zonal mean (a) drizzle fraction and (b) surface latent heat fluxes in the convergence experiment. Drizzle fraction refers to the fractional contribution of $\leq 5$ mm/day convective precipitation rates to all convection precipitation rates, for the duration of the simulations and computed from 6-hourly instantaneous fields.}
 \label{fig:2zonal}
 \end{figure}
 
