--- a/bib.bib
+++ b/bib.bib
@@ -2311,20 +2311,6 @@ Pages = {{407-446}},
   OPTannote = 	 {DOI:10.1175/JCLI-D-11-00448.1}
 }
 
-@Article{THO2006GRL,
-  author = 	 {Y. O. Takahashi and K. Hamilton and W. Ohfuchi},
-  title = 	 {Explicit global simulation of the mesoscale spectrum of atmospheric motions},
-  journal = 	 {Geophys. Res. Lett.},
-  year = 	 {2006},
-  OPTkey = 	 {},
-  volume = 	 {33},
-  number = 	 {L12812},
-  OPTpages = 	 {},
-  OPTmonth = 	 {},
-  OPTnote = 	 {},
-  OPTannote = 	 {}
-}
-
 @Article{LBDB1998JCFD,
   author = 	 {D.K. Lilly and G. Bassett and K. Droegemeier and P. Bartello},
   title = 	 {Stratified Turbulence in the atmospheric Mesoscales},
@@ -9007,4 +8993,25 @@ the Simulated Greenland Surface Mass Balance},
   number={D23},
   year={2010},
   publisher={Wiley Online Library}
+}
+
+@article{CL2001JGR,
+  title={Horizontal velocity structure functions in the upper troposphere and lower stratosphere: 1. Observations},
+  author={Cho, John YN and Lindborg, Erik},
+  journal={Journal of Geophysical Research: Atmospheres},
+  volume={106},
+  number={D10},
+  pages={10223--10232},
+  year={2001},
+  publisher={Wiley Online Library}
+}
+
+@article{DETAL1996JAS,
+  title={Scale invariance of liquid water distributions in marine stratocumulus. Part I: Spectral properties and stationarity issues},
+  author={Davis, Anthony and Marshak, Alexander and Wiscombe, Warren and Cahalan, Robert},
+  journal={Journal of the atmospheric sciences},
+  volume={53},
+  number={11},
+  pages={1538--1558},
+  year={1996}
 }
