--- a/resolution.tex
+++ b/resolution.tex
@@ -148,27 +148,29 @@ The large increase in magnitude of the upward and downward vertical velocities w
 \label{fig:corr}
 \end{figure}
 
-To further understand this relationship, a logistic regression between $\langle f_{d} \rangle \langle \omega_{d} \rangle$ and $FREQZM$ is performed for each grid column within each of the simulations. Logistic regression uses an iterative method to fit a continuous variable predictor, $x$ to a binary predictand $p$ using the exponential \citep{WILKSBOOK},
-\begin{equation}
-p = \frac{exp{[b_0 + b_1 x]}}{1 + exp{[b_0 + b_1 x]}}, \label{eq:logreg}
-\end{equation}
-where $b_0$ and $b_1$ are the shape parameters of the exponential. The predictor is the instantaneous $\langle f_{d} \rangle \langle \omega_{d} \rangle$ of a grid column, and the predictand the binary $FREQZM$. The assumption is then that subsidence is the independent variable, which is reasonable considering the environment of subsiding regions is generally more stable than its surroundings, and the ZM scheme is modulated by the dilute CAPE stability metric. Grid column regressions that are statistically significant at the $95\%$ level using a log-likelihood test \citep{WILKSBOOK} are retained for analysis. Since the aqua-planets have zonally symmetric boundary conditions, there is a zonally varying structure in the goodness of fit (R-value) and parameter $b_1$ (hereafter referred to as the sensitivity parameter; Figure~\ref{fig:4zonal}a,b). {\color{red}{The large latitudinal dependence in the logistic regression skill across all resolutions however, is not mirrored by the changes in the climatological zonal mean $\langle f_{d} \rangle \langle \omega_{d} \rangle$ and $FREQZM$ with resolution, shown in Figures~\ref{fig:4zonal}c,d., being much less dependent on latitude.}}
+Figure~\ref{fig:4zonal}a,b, shows the zonal mean variations in $\langle f_{d} \rangle \, \langle \omega_{d} \rangle$ and $FREQZM$ in the control convergence experiment. $FREQZM$ is largest in the $\pm 10^{\circ}$ latitude region, within the Intertropical Convergence Zone (ITCZ), and rapidly decreasing polewards into the subtropics. $\langle f_{d} \rangle \, \langle \omega_{d} \rangle$ increases away from the ITCZ region and reaches a maximum at the poleward limit of the Hadley Cell. The increase (decrease) in $\langle f_{d} \rangle \, \langle \omega_{d} \rangle$ ($FREQZM$) with resolution is to first-order, independent of latitude.
 
 \begin{figure}
 \begin{center}
 \noindent\includegraphics[width=14pc,angle=0]{figs/temp_4zonal.pdf}\\
 \end{center}
-\caption{Zonal mean (a) R-values and (b) sensitivity parameter in the logistic regression, (c) climatological $\langle f_{d} \rangle \langle \omega_{d} \rangle$ and (d) climatological $FREQZM$.}
+\caption{Zonal mean (a) climatological $\langle f_{d} \rangle \langle \omega_{d} \rangle$ and (b) climatological $FREQZM$. Zonal mean (c) R-values and (d) sensitivity parameter in the logistic regression.}
 \label{fig:4zonal}
 \end{figure}
 
-The zonal mean R-values indicate the greatest goodness of fit in the $\pm 10^{\circ}$ latitude band, hereafter referred to as the deep tropics. In this region, the sensitivity parameter is large and negative (Figure~\ref{fig:4zonal}b), consistent with the idea that subsiding motion stabilizes the environment and actively depresses dilute CAPE and the activity of the ZM scheme in the simulations. The sensitivity parameter becomes less negative in the deep tropics with resolution, likely due to the greater magnitude $\langle f_{d} \rangle \langle \omega_{d} \rangle$ with resolution, which requires a lower sensitivity parameter to predict the binary $FREQZM$. The R-values generally decrease with resolution indicating that there is degradation in the relationship with resolution.
+To further understand the relationship between subsidence and activity of the ZM scheme, a logistic regression between $\langle f_{d} \rangle \langle \omega_{d} \rangle$ and $FREQZM$ is performed for each grid column within each of the simulations. Logistic regression uses an iterative method to fit a continuous variable predictor, $x$ to a binary predictand $p$ using the exponential \citep{WILKSBOOK},
+\begin{equation}
+p = \frac{exp{[b_0 + b_1 x]}}{1 + exp{[b_0 + b_1 x]}}, \label{eq:logreg}
+\end{equation}
+where $b_0$ and $b_1$ are the shape parameters of the exponential. The predictor is the instantaneous $\langle f_{d} \rangle \langle \omega_{d} \rangle$ of a grid column, and the predictand the binary $FREQZM$. The assumption is then that subsidence is the independent variable, which is reasonable considering the environment of subsiding regions is generally more stable than its surroundings, and the ZM scheme is modulated by the dilute CAPE stability calculation. Grid column regressions that are statistically significant at the $95\%$ level using a log-likelihood test \citep{WILKSBOOK} are retained for analysis. Since the aqua-planets have zonally symmetric boundary conditions, there is a zonally varying structure in the goodness of fit (R-value) and parameter $b_1$ (hereafter referred to as the sensitivity parameter; Figure~\ref{fig:4zonal}c,d).
+
+The zonal mean R-values indicate the greatest goodness of fit in the $\pm 10^{\circ}$ latitude band, hereafter referred to as the deep tropics. In this region, the sensitivity parameter is large and negative (Figure~\ref{fig:4zonal}d), consistent with the idea that subsiding motion stabilizes the environment and actively depresses dilute CAPE and the activity of the ZM scheme in the simulations. The sensitivity parameter becomes less negative in the deep tropics with resolution, likely due to the greater magnitude $\langle f_{d} \rangle \langle \omega_{d} \rangle$ with resolution, which requires a lower sensitivity parameter to predict the binary $FREQZM$. The R-values generally decrease with resolution indicating that there is degradation in the relationship with resolution.
 
 \subsubsection{Deep Tropics}
 
-Table~\ref{tbl:table2} shows the fractional contribution of the deep tropics to the climatological, global mean change in convective precipitation with resolution. The table indicates that a majority ($60-70 \%$) of the reduction in convective precipitation with resolution is from changes within the deep tropics (except in going from $ne20$ to $ne30$, where convective precipitation rates increase due to a wide double-ITCZ in the $ne20$ run that spans well outside of $\pm 10^{\circ}$ latitude, but which is contained within $\pm 10^{\circ}$ latitude in the $ne30$ run). Expanding the latitude boundaries marginally to $\pm 15^{\circ}$, roughly $75\%$ of the changes in convective precipitation with resolution occurs in this region (again, ignoring $ne30-ne20$; Table~\ref{tbl:table2}). This trend reflects changes in the partitioning of the Intertropical Convergence Zone (ITCZ) from convective to stratiform precipitation with resolution. Taken together, theregion with the largest change in convective precipitation with resolution is also the region where the logistic regression indicates that subsiding motion is most skillful at depressing the activity of the convection scheme.
+Table~\ref{tbl:table2} shows the fractional contribution of the deep tropics to the climatological, global mean change in convective precipitation with resolution. The table indicates that a majority ($60-70 \%$) of the reduction in convective precipitation with resolution is from changes within the deep tropics (except in going from $ne20$ to $ne30$, where convective precipitation rates increase, in part due to a wide double-ITCZ in the $ne20$ run that spans outside of $\pm 10^{\circ}$ latitude, but which is contained within $\pm 10^{\circ}$ latitude in the $ne30$ run). Expanding the latitude boundaries marginally to $\pm 15^{\circ}$, roughly $75\%$ of the changes in convective precipitation with resolution occurs in this region (again, ignoring $ne30-ne20$; Table~\ref{tbl:table2}). This trend reflects changes in the partitioning of the ITCZ from convective to stratiform precipitation with resolution. 
 
-%The change in  activity of the convection scheme $FREQZM$ with resolution is not substantially different in the deeper tropical regions compared with other regions (Figure~\ref{fig:4zonal}d), but rather, this region is unique for its substantially larger change in convective precipitation per change in $FREQZM$ with resolution.
+The large reduction in convective precipitation with resolution in the deep tropics also happens to be the region where the logistic regression indicates that subsiding motion is most skillful at depressing the activity of the convection scheme. But the change in $FREQZM$ in the deep tropics with resolution is not substantially different from any other region (Figure~\ref{fig:4zonal}d), including regions where the logistic regression indicates a poor relationship between subsidence and $FREQZM$. The deep tropics is then only unique for its substantially larger change in ZM precipitation per change in $FREQZM$ with resolution.
 
  \begin{table}
  \caption{Fractional contribution of latitude bands $\pm 10^{\circ}$ and $\pm 15^{\circ}$ to changes in global mean precipitation with resolution. The grid headers refer to differences with respect to the next lowest grid resolution, e.g., $ne30 = ne30-ne20$, $ne40=ne40-ne30$, etc... All differences are computed after conservative remapping to a common $ne20$ grid.}
@@ -190,9 +192,7 @@ Table~\ref{tbl:table2} shows the fractional contribution of the deep tropics to 
  \label{tbl:table2}
  \end{table}
 
-To characterize the dilute CAPE and frequency of subsiding regions in the deep tropics, temperature and moisture profiles are conditionally sampled depending on whether $\langle \omega \rangle$ is positive or negative, indicating predominantly subsiding or ascending grid columns. The time mean temperature and moisture profiles of subsiding and ascending regions are then used to compute the dilute CAPE used in the ZM scheme, offline. Figure~\ref{fig:cape}a shows the dilute CAPE values associated with mean conditions for ascending, descending and all grid columns in the deep tropics, with resolution. Ascending regions are associated with larger values of dilute CAPE ($>180$ J/kg) relative to subsiding regions ($<110$ J/kg), and the dilute CAPE in both regimes decreases monotonically with resolution. 
-
-The space-time weights associated with ascending and descending grid columns in the deep tropics vary drastically with resolution (Figure~\ref{fig:cape}b). The subsiding (ascending) space-time weights change from $0.32$ ($0.68$) in the $ne20$ run, monotonically increasing (decreasing) with resolution to $0.51$ ($0.49$) in the $ne120$ run. It is the increasing occurrence of stable, subsiding grid columns with resolution in addition to the reduction in dilute CAPE for both ascending and descending grid columns with resolution (Figure~\ref{fig:cape}a), that produces a reduction in dilute CAPE for the entire deep tropics, verified by the similar values derived through taking the weighted sum of the ascending/descending dilute CAPE values (grey crosses in Figure~\ref{fig:cape}a).
+To characterize the changes to dilute CAPE of subsiding regions in the deep tropics with resolution, temperature and moisture profiles are conditionally sampled depending on whether $\langle \omega \rangle$ is positive or negative, indicating predominantly subsiding or ascending grid columns. The time mean temperature and moisture profiles of subsiding and ascending regions are then used to compute the dilute CAPE used in the ZM scheme, offline. Figure~\ref{fig:cape}a shows the dilute CAPE values associated with mean conditions for ascending, descending and all grid columns in the deep tropics, with resolution. Ascending regions are associated with larger values of dilute CAPE ($>180$ J/kg) relative to subsiding regions ($<110$ J/kg), and the dilute CAPE in both regimes decreases monotonically with resolution. 
 
 \begin{figure}
 \begin{center}
@@ -202,7 +202,7 @@ The space-time weights associated with ascending and descending grid columns in 
 \label{fig:cape}
 \end{figure}
 
-Figure~\ref{fig:profiles} shows the time mean temperature and specific humidity profiles of subsiding grid cells in the deep tropics, expressed as anomalies from the mean temperature and specific humidity of the entire deep tropics. The mean profiles of subsiding regions have an anomalous warming layer in the $600-800$ hPa layer and an anomalous moisture deficit throughout the entire column. This warming and drying pattern is consistent with the effects of subsidence, whose motion adiabatically warms the environment while simultaneously advecting drier conditions aloft, downward. Both warming and drying the environment oppose the growth of dilute CAPE through reducing parcel buoyancy; warming the environment relative to the temperature of rising air parcels reduces parcel buoyancy \citep{Z2002JGR}, and mixing drier environmental air into rising air parcels reduces the moisture available to warm parcels through latent heating \citep{RB1992JAS}. 
+Figure~\ref{fig:profiles} shows the time mean temperature and specific humidity profiles of subsiding grid cells in the deep tropics, expressed as anomalies from the mean temperature and specific humidity of the entire deep tropics. The mean profiles of subsiding regions have an anomalous warming layer in the $600-800$ hPa layer and an anomalous moisture deficit throughout the entire column. This warming and drying pattern is consistent with the effects of subsidence, whose motion adiabatically warms the environment while simultaneously advecting drier conditions aloft, downward. Both warming and drying the environment oppose the growth of dilute CAPE through reducing parcel buoyancy; warming the environment relative to the temperature of rising air parcels reduces parcel buoyancy \citep{Z2002JGR}, and mixing drier environmental air into rising air parcels reduces the moisture available to warm parcels through latent heating \citep{RB1992JAS}.
 
 \begin{figure}
 \begin{center}
@@ -212,15 +212,15 @@ Figure~\ref{fig:profiles} shows the time mean temperature and specific humidity 
 \label{fig:profiles}
 \end{figure}
 
-The large spread in dilute CAPE between ascending/descending regions is crucial for maintaining the relationship shown by the logistic regression, since the much smaller values of dilute CAPE of subsiding grid columns is required to depress dilute CAPE below the threshold for convection. To unravel the contributions of warming and drying to this large spread in dilute CAPE between the two regimes, dilute CAPE is recomputed using the mean specific humidity of ascending/descending regions in the deep tropics, but setting the temperature profile to the mean profile for the entire deep tropics. Figure~\ref{fig:cape}c shows this influence of changing moisture on dilute CAPE, which to first order, explains the large spread in dilute CAPE between the ascending/descending regions in the deep tropics. Temperature differences between ascending/descending regimes has a smaller, second order influence on the spread in dilute CAPE (not shown).
+The large spread in dilute CAPE between ascending/descending regions is crucial for maintaining the relationship shown by the logistic regression, since the much smaller values of dilute CAPE of subsiding grid columns is required to depress dilute CAPE below the threshold for convection. To unravel the contributions of warming and drying shown in Figure~\ref{fig:profiles} to the large spread in dilute CAPE between the two regimes, dilute CAPE is recomputed using the mean specific humidity of ascending/descending regions in the deep tropics, but setting the temperature profile to the mean profile for the entire deep tropics. Figure~\ref{fig:cape}c shows this influence of changing moisture on dilute CAPE, which to first order, explains the large spread in dilute CAPE between the ascending/descending regions in the deep tropics. Temperature differences between ascending/descending regimes has a smaller, second order influence on the spread in dilute CAPE (not shown).
 
-The increasing occurrence of subsiding grid columns accounts for about half of the changes in dilute CAPE in the deep tropics with resolution, the other half being due to the systematic reduction in dilute CAPE for both ascending and descending regions. To isolate whether temperature or moisture contributes to the latter contributions change in dilute CAPE, dilute CAPE is recomputed for all resolutions, but through fixing the moisture profiles to the lowest resolution $ne20$ profile, and then repeated through fixing only the temperature profile to $ne20$ values. Figure~\ref{fig:cape}d shows the influence of the changing temperature profile with resolution on dilute CAPE of ascending/descending grid columns, and illustrates that the systematic reduction in dilute CAPE with resolution in both regimes is primarily from changes to the temperature field. Moisture changes with resolution has a smaller influence, only appreciably impacting the dilute CAPE of ascending regions at higher resolutions (not shown).
+The space-time weights associated with ascending and descending grid columns in the deep tropics vary drastically with resolution (Figure~\ref{fig:cape}b). The subsiding (ascending) space-time weights change from $0.32$ ($0.68$) in the $ne20$ run, monotonically increasing (decreasing) with resolution to $0.51$ ($0.49$) in the $ne120$ run. This increasing occurrence of stable, subsiding grid columns accounts for about half of the changes in dilute CAPE in the deep tropics with resolution, the other half being due to the systematic reduction in dilute CAPE for both ascending and descending regions (Figure~\ref{fig:cape}a). This is verified through comparing the weighted sum of the ascending/descending dilute CAPE values with the dilute CAPE for the entire deep tropics (compare black and grey crosses in Figure~\ref{fig:cape}a). 
+
+To isolate the relative importance of temperature or moisture on the systematic reduction in dilute CAPE with resolution for both ascending/descending regimes, dilute CAPE is recomputed for all resolutions, but through fixing the moisture profiles to the lowest resolution $ne20$ profile, and repeated through fixing only the temperature to the $ne20$ profile. Figure~\ref{fig:cape}d shows the influence of changing temperature profile with resolution on dilute CAPE of ascending/descending grid columns, and illustrates that the systematic reduction in dilute CAPE with resolution in both regimes is primarily from changes to the temperature field. Moisture changes with resolution has a smaller influence, only appreciably impacting the dilute CAPE of ascending regions at higher resolutions (not shown).
 
 \subsubsection{Subtropics}
 
 Figure~\ref{fig:cape-subt}a shows the dilute CAPE values computed from mean temperature and moisture of subsiding and ascending regions in the $\pm \left( 10^{\circ}-30^{\circ} \right) $ latitude bands, hereafter referred to as the subtropics. The spread in dilute CAPE between ascending and descending grid columns is much smaller than for the deep tropics (Figure~\ref{fig:cape}a), and their dilute CAPE  values vary much less with resolution ($\sim 20$ J/kg, compared with $\sim 80$ J/kg across all resolutions in the deep tropics). Through recomputing dilute CAPE and fixing the temperature or moisture profiles to $ne20$ values, the reduction in dilute CAPE with resolution is attributed to both temperature and moisture, but with temperature changes playing a larger role (not shown).
-
-The lack of spread in dilute CAPE between ascending/descending regions explains the declining skill in the logistic regression in the subtropics (Figure~\ref{fig:4zonal}a), since with no strong dependence of dilute CAPE on ascending/descending regimes, subsidence cannot be a skillful predictor of depressing dilute CAPE below the threshold for convection. There is also no significant changes to the occurrence of subsiding grid columns with resolution. The space-time weights of ascending/descending motion are more-or-less invariant with resolution (Figure~\ref{fig:cape-subt}b).
 
 \begin{figure}
 \begin{center}
@@ -230,7 +230,7 @@ The lack of spread in dilute CAPE between ascending/descending regions explains 
 \label{fig:cape-subt}
 \end{figure}
 
-To understand why dilute CAPE is so insensitive to subsidence in the subtropics, Figure~\ref{fig:transect} shows two snapshots of $\omega$ in the longitude-pressure plane at  $\sim 18^{\circ}$ latitude in the $ne30$ simulations, overlain by an isoline delineating where the ZM mass fluxes are quite active. The ZM mass fluxes typically only extend up to about the 800 hPa level in this region, which often occurs with appreciable subsiding motion aloft. In the $\pm \left(10^{\circ}-20^{\circ} \right)$ latitude bands there are opposing influences on dilute CAPE; a global maximum in surface latent heat fluxes (Figure~\ref{fig:2zonal}b), influencing the thermodynamic state of boundary layer parcels and increasing dilute CAPE from below \citep{Z2002JGR}, and subsidence, which opposes dilute CAPE from above. The shallow convection regime of the ZM scheme depicted in Figure~\ref{fig:transect} is likely a result of these two opposing influences on CAPE, with large latent heat fluxes increasing dilute CAPE just above the threshold for convection, but with subsidence restricting dilute CAPE from becoming much larger.
+The lack of spread in dilute CAPE between ascending/descending regions explains the declining skill in the logistic regression in the subtropics (Figure~\ref{fig:4zonal}a), since with no strong dependence of dilute CAPE on ascending/descending regimes, subsidence cannot be a skillful predictor of depressing dilute CAPE below the threshold for convection. There is also no significant changes to the occurrence of subsiding grid columns with resolution. The space-time weights of ascending/descending motion are more-or-less invariant with resolution (Figure~\ref{fig:cape-subt}b).
 
 \begin{figure}
 \begin{center}
@@ -240,15 +240,17 @@ To understand why dilute CAPE is so insensitive to subsidence in the subtropics,
 \label{fig:transect}
 \end{figure}
 
-AGCMs are known to suffer from a drizzle bias, producing too much light rain relative to observations \citep{D2006JCLIM}. Figure~\ref{fig:2zonal}a shows the fraction of ZM precipitation $\leq 5$ mm/day in the simulations, which stubbornly persists at 70\% in the $\pm \left(10^{\circ}-20^{\circ} \right)$ latitude bands, irrespective of resolution. The analysis of dilute CAPE in the subtropics indicates that the predominance of drizzle is a result of this shallow convection regime of the ZM scheme. While $FREQZM$ does decrease with resolution in drizzling regions (Figure~\ref{fig:4zonal}d), this resolution sensitivity is not an effective means to eliminate the shallow convection regime of the ZM scheme.
+To understand why dilute CAPE is so insensitive to subsidence in the subtropics, Figure~\ref{fig:transect} shows two snapshots of $\omega$ in the longitude-pressure plane at  $\sim 18^{\circ}$ latitude in the $ne30$ simulations, overlain by an isoline delineating where the ZM mass fluxes are quite active. The ZM mass fluxes typically only extend up to about the 800 hPa level in this region, which often occurs with appreciable subsiding motion aloft. Though properly a deep convection scheme, the ZM scheme is acting as a shallow convection scheme in this region. This shallow convection regime tends to produce light rain, or drizzle, which is a common bias in AGCMs \citep{D2006JCLIM}. Figure~\ref{fig:2zonal}a shows the fraction of ZM precipitation $\leq 5$ mm/day in the simulations, which stubbornly persists at $\sim$ 70\% in the $\pm \left(10^{\circ}-20^{\circ} \right)$ latitude bands, irrespective of resolution.
 
 \begin{figure}
 \begin{center}
 \noindent\includegraphics[width=14pc,angle=0]{figs/temp_2zonal.pdf}\\
 \end{center}
-\caption{Climatological, zonal mean (a) drizzle fraction and (b) surface latent heat fluxes in the convergence experiment. Drizzle fraction refers to the fractional contribution of $\leq 5$ mm/day convective precipitation rates to all convection precipitation rates, for the duration of the simulations and computed from 6-hourly instantaneous fields.}
+\caption{Climatological zonal mean (a) drizzle fraction and (b) surface latent heat fluxes in the convergence experiment. Drizzle fraction is defined as sum  convective precipitation rates $\leq 5$ mm/day divided by the sum of all convective precipitation rates, computed from 6-hourly instantaneous fields over the duration of the simulation.}
 \label{fig:2zonal}
 \end{figure}
+
+In the $\pm \left(10^{\circ}-20^{\circ} \right)$ latitude bands there are opposing influences on dilute CAPE; a global maximum in surface latent heat fluxes (Figure~\ref{fig:2zonal}b), influencing the thermodynamic state of boundary layer parcels and increasing dilute CAPE from below \citep{Z2002JGR}, and increasing subsidence (Figure~\ref{fig:4zonal}a), which opposes dilute CAPE from above. The shallow convection regime of the ZM scheme is likely a result of these two opposing influences on CAPE, with large latent heat fluxes increasing dilute CAPE just above the threshold for convection, but with subsidence restricting dilute CAPE from becoming much larger. This interpretation is supported by the logistic regression, which shows a local minimum in goodness-of-fit in the $\pm \left(10^{\circ}-20^{\circ} \right)$ latitude region (Figure~\ref{fig:4zonal}c), indicating the elevated subsidence is not that skillful in depressing dilute CAPE below the threshold for convection.
 
 \subsection{Vertical Velocities and Stratiform Precipitation}
 
